--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,7 +17,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: agri-curve
-            image: nsboan/agri-curve:v3
+            image: nsboan/agri-curve:4
             env:
             - name: USERNAME
               value: "nsboan"
